@@ -8,6 +8,7 @@
            writes out the error messages of the archiver
            archive type autodetection by its header (first 512 byte)
 
+    FIXED: panel popup gets focus at opening, gives focus to panel at hiding
     FIXED: viewer, detaching tab changes 'Editing' to 'Viewing'
            
      I18N: viewer: 'Editing', 'Viewing' can be translated
